add: implemented phase 1 apis
